# sago_multi_scrambler_puzzle2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
data/: AUTH
data/collections/fairy_tales/: README.md
data/sprites/: background.sprite  mouse.sprite
extra/docker/: Dockerfile
src/: ImageHolder.cpp  ImageHolder.hpp  ImageSelectState.cpp  ImageSelectState.hpp  MainGameState.cpp  MainGameState.hpp  PuzzleSingleImageState.cpp  PuzzleSingleImageState.hpp  globals.hpp  sago_common.cpp  sago_common.hpp  sago_multi_scrambler_puzzle2.cpp
src/editor/: SagoTextureSelector.cpp  SagoTextureSelector.hpp
src/sago/: SagoDataHolder.cpp  SagoSprite.cpp
